unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/OrderApi__Scheduled_Payment__c.object-meta.xml
<CustomObject>
    <description>Scheduled Payments track the status and details around recurring and scheduled invoice E-Payments related to a Sales Order.</description>
    <label>Scheduled Payment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Scheduled Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>