unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Cancel_Payment_in_GoCardless__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Cancel_Payment_in_GoCardless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, System cancels the payment in GoCardless. Default Unchekced</description>
    <inlineHelpText>When checked, System cancels the payment in GoCardless. Default Unchekced</inlineHelpText>
    <label>Cancel Payment in GoCardless</label>
    <type>Checkbox</type>
</CustomField>