unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Create_Payment_in_GoCardless__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Create_Payment_in_GoCardless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will create a payment record in GoCardless based on the scheduled payment data ** DEFAULTS unchecked **</description>
    <inlineHelpText>When checked, this will create a payment record in GoCardless based on the scheduled payment data ** DEFAULTS unchecked **</inlineHelpText>
    <label>Create Payment in GoCardless</label>
    <type>Checkbox</type>
</CustomField>