unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__GoCardless_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>DDApi__GoCardless_Payment_Id__c</fullName>
    <description>** Direct Debit ** System Calculated ** Populates this field with GoCardless Payment Id, when Member Nation pings GoCardless.</description>
    <inlineHelpText>** Direct Debit ** System Calculated ** Populates this field with GoCardless Payment Id, when Member Nation pings GoCardless.</inlineHelpText>
    <label>GoCardless Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>