unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Is_Direct_Debit__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Direct_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** Direct Debit ** System Calculated ** When checked, this is a direct debit payment related scheduled payment DEFAULTS: unchecked</description>
    <inlineHelpText>** Direct Debit ** System Calculated ** When checked, this is a direct debit payment related scheduled payment DEFAULTS: unchecked</inlineHelpText>
    <label>Is Direct Debit</label>
    <type>Checkbox</type>
</CustomField>