unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Payment_Created__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Payment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** SYSTEM GENERATED ** Checked when the payment is created in GoCardless for this scheduled payment.</description>
    <inlineHelpText>** SYSTEM GENERATED ** Checked when the payment is created in GoCardless for this scheduled payment.</inlineHelpText>
    <label>Payment Created</label>
    <type>Checkbox</type>
</CustomField>