unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Payment_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Payment_Creation_Date__c</fullName>
    <description>** SYSTEM GENERATED ** Date when the payment has been created in GoCardless</description>
    <inlineHelpText>** SYSTEM GENERATED ** Date when the payment has been created in GoCardless</inlineHelpText>
    <label>Payment Creation Date</label>
    <type>Date</type>
</CustomField>