unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/DDApi__Retry_Payment_in_GoCardless__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Retry_Payment_in_GoCardless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, system will retry this payment in GoCardless that has been failed because of specific reasons (insufficient funds). You can retry a failed payment for 3 times. Default Unchecked.</description>
    <inlineHelpText>When checked, system will retry this payment in GoCardless that has been failed because of specific reasons (insufficient funds). You can retry a failed payment for 3 times. Default Unchecked.</inlineHelpText>
    <label>Retry Payment in GoCardless</label>
    <type>Checkbox</type>
</CustomField>