unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount__c</fullName>
    <description>**System Calculated** The amount due against the Scheduled Payment.</description>
    <inlineHelpText>**System Calculated** The amount charged successfully against the Scheduled Payment.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>