unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__API_Response__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__API_Response__c</fullName>
    <description>**System Calculated** API Response from the callout made for processing the payment</description>
    <inlineHelpText>**System Calculated** API Response from the callout made for processing the payment</inlineHelpText>
    <label>API Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>