unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>Balance Due for this Installment.</description>
    <inlineHelpText>Balance Due for this Installment.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>