unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Custom_Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Custom_Scheduled_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked these scheduled payments wont run as part of the OrderApi ScheduledPaymentBatchable.cls ** Defaults unchecked **</description>
    <inlineHelpText>When checked these scheduled payments wont run as part of the OrderApi ScheduledPaymentBatchable.cls ** Defaults unchecked **</inlineHelpText>
    <label>Custom Scheduled Payment</label>
    <type>Checkbox</type>
</CustomField>