unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__EPayment_Created__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__EPayment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the system has generated an E-Payment regardless of the result.</description>
    <inlineHelpText>Checked if the system has generated an E-Payment regardless of the result.</inlineHelpText>
    <label>E-Payment Created</label>
    <type>Checkbox</type>
</CustomField>