unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked if the Scheduled Payment was processed with errors.</description>
    <inlineHelpText>**System Calculated** Checked if the Scheduled Payment was processed with errors.</inlineHelpText>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>