unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Invoice scheduled for payment.</description>
    <inlineHelpText>Link to the Invoice scheduled for payment.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OrderApi__Invoice__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>