unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Is_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** Checked when the Scheduled Payment has been cancelled.</description>
    <inlineHelpText>**System Calculated/Override** Checked when the Scheduled Payment has been cancelled.</inlineHelpText>
    <label>Is Cancelled</label>
    <type>Checkbox</type>
</CustomField>