unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Is_Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** checked if a callout is made and the payment is processed</description>
    <inlineHelpText>**System Calculated** checked if a callout is made and the payment is processed</inlineHelpText>
    <label>Is Payment Processed</label>
    <type>Checkbox</type>
</CustomField>