unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Field** Do not manually update/override. Checked when the system has processed the API transaction for the scheduled payment.</description>
    <inlineHelpText>**System Field** Do not manually update/override. Checked when the system has processed the API transaction for the scheduled payment.</inlineHelpText>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>