unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__No_Auto_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__No_Auto_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated/Override** When checked Scheduled Payment record will be skipped by batch job.</description>
    <inlineHelpText>**System Calculated/Override** When checked Scheduled Payment record will be skipped by batch job.</inlineHelpText>
    <label>System</label>
    <type>Checkbox</type>
</CustomField>