unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Description__c</fullName>
    <description>** System Calculated ** Description formula for scheduled payments.</description>
    <formula>IF (OrderApi__Invoice__c != null,
            $Label.OrderApi__Payment_Description_Prefix_Invoice &amp;  OrderApi__Invoice__r.Name,
            IF (OrderApi__Subscription__c != null,
            $Label.OrderApi__Payment_Description_Prefix_Invoice &amp; &quot; &quot; &amp; OrderApi__Subscription__r.OrderApi__Item__r.OrderApi__Display_Name__c,
            IF (OrderApi__Sales_Order__c != null,
            $Label.OrderApi__Payment_Description_Prefix_Sales_Order &amp; &quot; (REF:&quot; &amp; OrderApi__Sales_Order__r.Name &amp; &quot;)&quot;,
            &quot;&quot;
            )))</formula>
    <inlineHelpText>** System Calculated ** Description formula for scheduled payments.</inlineHelpText>
    <label>Payment Description</label>
    <type>Text</type>
</CustomField>