unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the Payment Gateway to use for the Scheduled Payment.</description>
    <inlineHelpText>** Required ** Link to the Payment Gateway to use for the Scheduled Payment.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>