unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <description>**Required** Master-detail Payment Method. Link to the E-Payment Method that will be used/has been used for the Schedule Payment.</description>
    <inlineHelpText>**Required** Master-detail Payment Method. Link to the E-Payment Method that will be used/has been used for the Schedule Payment.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>