unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Processed_Date__c</fullName>
    <description>**System Field** Do not manually update/override. The date the Scheduled Payment was processed.</description>
    <inlineHelpText>**System Field** Do not manually update/override. The date the Scheduled Payment was processed.</inlineHelpText>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>