unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Link to related Sales Order.</description>
    <inlineHelpText>**Required** Link to related Sales Order.</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipLabel>Scheduled Payments</relationshipLabel>
    <relationshipName>Scheduled_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>