unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Saved_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Saved_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Payment Method that will be used/has been used for the Schedule Payment.</description>
    <inlineHelpText>Link to the Payment Method that will be used/has been used for the Schedule Payment.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipLabel>Scheduled Payment Methods</relationshipLabel>
    <relationshipName>Scheduled_Payments_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>