unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Scheduled_Date__c</fullName>
    <description>**System Calculated/Override** The date scheduled for the charge against the linked Payment Method.</description>
    <inlineHelpText>**System Calculated/Override** The date scheduled for the charge against the linked Payment Method.</inlineHelpText>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>