unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Succeeded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Succeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Field** Do not manually update/override. Checked when the scheduled payment is scheduled for automatic electronic payment and has been successfully charged.</description>
    <inlineHelpText>**System Field** Do not manually update/override. Checked when the schedule payment has been successfully charged.</inlineHelpText>
    <label>Succeeded</label>
    <type>Checkbox</type>
</CustomField>