unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__System_Message__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Message__c</fullName>
    <description>**System Calculated** API/Gateway Message for decline/success descriptions.</description>
    <inlineHelpText>**System Calculated** API/Gateway Message for decline/success descriptions.</inlineHelpText>
    <label>System Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>