unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System Calculated ** Relates Subscription Schedule Payments to Subscription Terms.</description>
    <inlineHelpText>System Calculated ** Relates Subscription Schedule Payments to Subscription Terms.</inlineHelpText>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Schedule Payments</relationshipLabel>
    <relationshipName>Schedule_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>