unpackaged/main/default/objects/OrderApi__Scheduled_Payment__c/fields/OrderApi__Token__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Token__c</fullName>
    <description>**System Calculated** Token used for API transactions.</description>
    <formula>OrderApi__Saved_Payment_Method__r.OrderApi__Payment_Method_Token__c</formula>
    <inlineHelpText>**System Calculated** Token used for API transactions.</inlineHelpText>
    <label>Token</label>
    <type>Text</type>
</CustomField>